[gd_scene load_steps=16 format=3 uid="uid://di5kxw6ai4p8m"]

[ext_resource type="Script" uid="uid://dr4mf1vtemlis" path="res://juego_wiki2/Manager.gd" id="1_1fb8j"]
[ext_resource type="Script" uid="uid://2bkbpvkirfdc" path="res://juego_wiki2/revelar.gd" id="2_2bt21"]
[ext_resource type="Texture2D" uid="uid://bajpwpvtmf51o" path="res://recursos/fondos/f_dl.webp" id="2_2s7da"]
[ext_resource type="Texture2D" uid="uid://d3blhv48qwysn" path="res://recursos/opciones.png" id="2_7chvb"]
[ext_resource type="Texture2D" uid="uid://6l6p7nme8lth" path="res://recursos/fire.png" id="2_rci71"]
[ext_resource type="Texture2D" uid="uid://chdcnven15ep3" path="res://recursos/amazingMan.png" id="3_rci71"]
[ext_resource type="FontFile" uid="uid://0rvc0aipo277" path="res://recursos/Letters_for_Learners.ttf" id="5_3dxnh"]
[ext_resource type="Script" uid="uid://d1x5of2r6vcm7" path="res://juego_wiki2/preview.gd" id="5_rci71"]
[ext_resource type="Texture2D" uid="uid://b1k0tivyrobuu" path="res://recursos/boton_arriba.png" id="8_voljw"]
[ext_resource type="Script" uid="uid://dv0423ia0eglp" path="res://juego_wiki2/movimiento.gd" id="9_eaw26"]

[sub_resource type="LabelSettings" id="LabelSettings_mrw00"]
font = ExtResource("5_3dxnh")
font_size = 35
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7chvb"]
size = Vector2(245.716, 230.808)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrw00"]
size = Vector2(245, 224.684)

[sub_resource type="LabelSettings" id="LabelSettings_7chvb"]
font = ExtResource("5_3dxnh")
font_size = 27
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2s7da"]
font = ExtResource("5_3dxnh")
font_size = 31
font_color = Color(0, 0, 0, 1)

[node name="Minijuego" type="Node2D"]
script = ExtResource("1_1fb8j")

[node name="Fondo" type="Sprite2D" parent="."]
texture = ExtResource("2_2s7da")
centered = false

[node name="Paginas" type="Node2D" parent="."]

[node name="Fondo" type="Sprite2D" parent="Paginas"]
position = Vector2(670.75, 338)
scale = Vector2(4.30488, 4.5303)
texture = ExtResource("2_7chvb")

[node name="Pagina1" type="Node2D" parent="Paginas"]

[node name="Label" type="Label" parent="Paginas/Pagina1"]
offset_left = 510.0
offset_top = 133.0
offset_right = 830.0
offset_bottom = 169.0
text = "¡Descubre nuestro proyecto!"
label_settings = SubResource("LabelSettings_mrw00")

[node name="Huecos" type="Node2D" parent="Paginas/Pagina1"]

[node name="asset1" type="Sprite2D" parent="Paginas/Pagina1/Huecos"]
position = Vector2(697, 261)
scale = Vector2(1.39592, 1.31278)
texture = ExtResource("2_rci71")
centered = false
script = ExtResource("2_2bt21")

[node name="Area2D" type="Area2D" parent="Paginas/Pagina1/Huecos/asset1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paginas/Pagina1/Huecos/asset1/Area2D"]
position = Vector2(122.142, 114.642)
shape = SubResource("RectangleShape2D_7chvb")

[node name="asset2" type="Sprite2D" parent="Paginas/Pagina1/Huecos"]
position = Vector2(269, 362)
scale = Vector2(1.39592, 0.431718)
texture = ExtResource("2_rci71")
centered = false
script = ExtResource("2_2bt21")

[node name="Area2D" type="Area2D" parent="Paginas/Pagina1/Huecos/asset2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paginas/Pagina1/Huecos/asset2/Area2D"]
position = Vector2(122.5, 114.658)
shape = SubResource("RectangleShape2D_mrw00")

[node name="Soluciones" type="Node2D" parent="Paginas/Pagina1"]

[node name="asset1" type="Sprite2D" parent="Paginas/Pagina1/Soluciones"]
visible = false
position = Vector2(868, 411.5)
scale = Vector2(2.40845, 2.03378)
texture = ExtResource("3_rci71")

[node name="asset2" type="Label" parent="Paginas/Pagina1/Soluciones"]
visible = false
offset_left = 269.0
offset_top = 361.0
offset_right = 611.0
offset_bottom = 462.0
text = "Los proyectos ayudan a solucionar una necesidad"
label_settings = SubResource("LabelSettings_7chvb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Pagina2" type="Node2D" parent="Paginas"]
visible = false

[node name="Label" type="Label" parent="Paginas/Pagina2"]
offset_left = 510.0
offset_top = 133.0
offset_right = 830.0
offset_bottom = 169.0
text = "Todo comienza en Human Practices"
label_settings = SubResource("LabelSettings_mrw00")

[node name="Huecos" type="Node2D" parent="Paginas/Pagina2"]

[node name="asset3" type="Sprite2D" parent="Paginas/Pagina2/Huecos"]
position = Vector2(697, 261)
scale = Vector2(1.39592, 1.31278)
texture = ExtResource("2_rci71")
centered = false
script = ExtResource("2_2bt21")

[node name="Area2D" type="Area2D" parent="Paginas/Pagina2/Huecos/asset3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paginas/Pagina2/Huecos/asset3/Area2D"]
position = Vector2(122.142, 114.642)
shape = SubResource("RectangleShape2D_7chvb")

[node name="asset4" type="Sprite2D" parent="Paginas/Pagina2/Huecos"]
position = Vector2(269, 362)
scale = Vector2(1.39592, 0.431718)
texture = ExtResource("2_rci71")
centered = false
script = ExtResource("2_2bt21")

[node name="Area2D" type="Area2D" parent="Paginas/Pagina2/Huecos/asset4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paginas/Pagina2/Huecos/asset4/Area2D"]
position = Vector2(122.5, 114.658)
shape = SubResource("RectangleShape2D_mrw00")

[node name="Soluciones" type="Node2D" parent="Paginas/Pagina2"]

[node name="asset3" type="Sprite2D" parent="Paginas/Pagina2/Soluciones"]
visible = false
position = Vector2(868, 411.5)
scale = Vector2(2.40845, 2.03378)
texture = ExtResource("3_rci71")

[node name="asset4" type="Label" parent="Paginas/Pagina2/Soluciones"]
visible = false
offset_left = 269.0
offset_top = 361.0
offset_right = 611.0
offset_bottom = 462.0
text = "En Human Practices nos damos cuenta de un problema"
label_settings = SubResource("LabelSettings_7chvb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Pagina3" type="Node2D" parent="Paginas"]
visible = false

[node name="Label" type="Label" parent="Paginas/Pagina3"]
offset_left = 510.0
offset_top = 133.0
offset_right = 830.0
offset_bottom = 169.0
text = "El equipo se reune"
label_settings = SubResource("LabelSettings_mrw00")

[node name="Huecos" type="Node2D" parent="Paginas/Pagina3"]

[node name="asset5" type="Sprite2D" parent="Paginas/Pagina3/Huecos"]
position = Vector2(697, 261)
scale = Vector2(1.39592, 1.31278)
texture = ExtResource("2_rci71")
centered = false
script = ExtResource("2_2bt21")

[node name="Area2D" type="Area2D" parent="Paginas/Pagina3/Huecos/asset5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paginas/Pagina3/Huecos/asset5/Area2D"]
position = Vector2(122.142, 114.642)
shape = SubResource("RectangleShape2D_7chvb")

[node name="asset6" type="Sprite2D" parent="Paginas/Pagina3/Huecos"]
position = Vector2(269, 362)
scale = Vector2(1.39592, 0.431718)
texture = ExtResource("2_rci71")
centered = false
script = ExtResource("2_2bt21")

[node name="Area2D" type="Area2D" parent="Paginas/Pagina3/Huecos/asset6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paginas/Pagina3/Huecos/asset6/Area2D"]
position = Vector2(122.5, 114.658)
shape = SubResource("RectangleShape2D_mrw00")

[node name="Soluciones" type="Node2D" parent="Paginas/Pagina3"]

[node name="asset5" type="Sprite2D" parent="Paginas/Pagina3/Soluciones"]
visible = false
position = Vector2(868, 411.5)
scale = Vector2(2.40845, 2.03378)
texture = ExtResource("3_rci71")

[node name="asset6" type="Label" parent="Paginas/Pagina3/Soluciones"]
visible = false
offset_left = 269.0
offset_top = 361.0
offset_right = 611.0
offset_bottom = 462.0
text = "Nuestro equipo es multidisciplinar, asi que se puede buscar una slución desde distintos puntos de vista."
label_settings = SubResource("LabelSettings_7chvb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Pagina4" type="Node2D" parent="Paginas"]
visible = false

[node name="Label" type="Label" parent="Paginas/Pagina4"]
offset_left = 510.0
offset_top = 133.0
offset_right = 830.0
offset_bottom = 169.0
text = "Y usamos..."
label_settings = SubResource("LabelSettings_mrw00")

[node name="Huecos" type="Node2D" parent="Paginas/Pagina4"]

[node name="asset7" type="Sprite2D" parent="Paginas/Pagina4/Huecos"]
position = Vector2(473, 228)
scale = Vector2(1.39592, 0.396476)
texture = ExtResource("2_rci71")
centered = false
script = ExtResource("2_2bt21")

[node name="Area2D" type="Area2D" parent="Paginas/Pagina4/Huecos/asset7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paginas/Pagina4/Huecos/asset7/Area2D"]
position = Vector2(122.142, 114.642)
shape = SubResource("RectangleShape2D_7chvb")

[node name="asset8" type="Sprite2D" parent="Paginas/Pagina4/Huecos"]
position = Vector2(476, 394)
scale = Vector2(1.39592, 0.431718)
texture = ExtResource("2_rci71")
centered = false
script = ExtResource("2_2bt21")

[node name="Area2D" type="Area2D" parent="Paginas/Pagina4/Huecos/asset8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paginas/Pagina4/Huecos/asset8/Area2D"]
position = Vector2(122.5, 114.658)
shape = SubResource("RectangleShape2D_mrw00")

[node name="Soluciones" type="Node2D" parent="Paginas/Pagina4"]

[node name="asset7" type="Label" parent="Paginas/Pagina4/Soluciones"]
visible = false
offset_left = 471.0
offset_top = 224.0
offset_right = 813.0
offset_bottom = 325.0
text = "¡La biología sintética!"
label_settings = SubResource("LabelSettings_7chvb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="asset8" type="Label" parent="Paginas/Pagina4/Soluciones"]
visible = false
offset_left = 475.0
offset_top = 393.0
offset_right = 817.0
offset_bottom = 494.0
text = "La biología sintetica........."
label_settings = SubResource("LabelSettings_7chvb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Botones" type="Node2D" parent="Paginas"]
script = ExtResource("9_eaw26")

[node name="Derecha" type="Sprite2D" parent="Paginas/Botones"]
position = Vector2(1094, 347)
rotation = 1.57063
texture = ExtResource("8_voljw")

[node name="Button" type="Button" parent="Paginas/Botones/Derecha"]
offset_left = -53.0
offset_top = -45.0
offset_right = 55.0
offset_bottom = 47.0

[node name="Izquierda" type="Sprite2D" parent="Paginas/Botones"]
position = Vector2(247, 347)
rotation = 1.57063
texture = ExtResource("8_voljw")
flip_v = true

[node name="Button" type="Button" parent="Paginas/Botones/Izquierda"]
offset_left = -53.0
offset_top = -45.0
offset_right = 55.0
offset_bottom = 47.0

[node name="Objetos" type="Node2D" parent="."]

[node name="Fondo" type="Sprite2D" parent="Objetos"]
position = Vector2(102, 321.5)
scale = Vector2(1, 4.53788)
texture = ExtResource("2_7chvb")

[node name="asset1" type="Sprite2D" parent="Objetos"]
position = Vector2(61, 88)
scale = Vector2(0.352113, 0.337838)
texture = ExtResource("3_rci71")

[node name="asset1" type="Button" parent="Objetos/asset1"]
offset_left = -74.0
offset_top = -74.0
offset_right = 74.0
offset_bottom = 77.0
script = ExtResource("5_rci71")

[node name="asset2" type="Button" parent="Objetos"]
offset_left = 90.0
offset_top = 76.0
offset_right = 179.0
offset_bottom = 107.0
text = "Necesidad"
script = ExtResource("5_rci71")

[node name="asset3" type="Sprite2D" parent="Objetos"]
position = Vector2(61, 153)
scale = Vector2(0.352113, 0.337838)
texture = ExtResource("3_rci71")

[node name="asset3" type="Button" parent="Objetos/asset3"]
offset_left = -74.0
offset_top = -74.0
offset_right = 74.0
offset_bottom = 77.0
script = ExtResource("5_rci71")

[node name="asset4" type="Button" parent="Objetos"]
offset_left = 90.0
offset_top = 139.0
offset_right = 179.0
offset_bottom = 170.0
text = "Problema"
script = ExtResource("5_rci71")

[node name="asset5" type="Sprite2D" parent="Objetos"]
position = Vector2(61, 221)
scale = Vector2(0.352113, 0.337838)
texture = ExtResource("3_rci71")

[node name="asset5" type="Button" parent="Objetos/asset5"]
offset_left = -74.0
offset_top = -74.0
offset_right = 74.0
offset_bottom = 77.0
script = ExtResource("5_rci71")

[node name="asset6" type="Button" parent="Objetos"]
offset_left = 90.0
offset_top = 209.0
offset_right = 179.0
offset_bottom = 240.0
text = "Multidisciplinar"
script = ExtResource("5_rci71")

[node name="asset7" type="Button" parent="Objetos"]
offset_left = 36.0
offset_top = 266.0
offset_right = 176.0
offset_bottom = 297.0
text = "Biología sintética"
script = ExtResource("5_rci71")

[node name="asset8" type="Button" parent="Objetos"]
offset_left = 55.0
offset_top = 314.0
offset_right = 150.0
offset_bottom = 345.0
text = "Explicación"
script = ExtResource("5_rci71")

[node name="Pistas" type="Node2D" parent="."]

[node name="FondoPista" type="Sprite2D" parent="Pistas"]
visible = false
position = Vector2(630, 101)
scale = Vector2(2.4004, 1.31278)
texture = ExtResource("2_7chvb")

[node name="asset1" type="Label" parent="Pistas"]
visible = false
offset_left = 440.0
offset_top = 50.0
offset_right = 825.0
offset_bottom = 156.0
text = "Parece que está en problemas..."
label_settings = SubResource("LabelSettings_2s7da")
horizontal_alignment = 1
vertical_alignment = 1

[node name="asset2" type="Label" parent="Pistas"]
visible = false
offset_left = 440.0
offset_top = 50.0
offset_right = 825.0
offset_bottom = 156.0
text = "¿Qué busca solucionar un proyecto?"
label_settings = SubResource("LabelSettings_2s7da")
horizontal_alignment = 1
vertical_alignment = 1

[node name="asset3" type="Label" parent="Pistas"]
visible = false
offset_left = 440.0
offset_top = 50.0
offset_right = 825.0
offset_bottom = 156.0
text = "¡Parece que se ha dado cuenta de algo!"
label_settings = SubResource("LabelSettings_2s7da")
horizontal_alignment = 1
vertical_alignment = 1

[node name="asset4" type="Label" parent="Pistas"]
visible = false
offset_left = 440.0
offset_top = 50.0
offset_right = 825.0
offset_bottom = 156.0
text = "¿De que se da cuenta Human Practices?"
label_settings = SubResource("LabelSettings_2s7da")
horizontal_alignment = 1
vertical_alignment = 1

[node name="asset5" type="Label" parent="Pistas"]
visible = false
offset_left = 440.0
offset_top = 50.0
offset_right = 825.0
offset_bottom = 156.0
text = "Parece que están discutiendo algo..."
label_settings = SubResource("LabelSettings_2s7da")
horizontal_alignment = 1
vertical_alignment = 1

[node name="asset6" type="Label" parent="Pistas"]
visible = false
offset_left = 440.0
offset_top = 50.0
offset_right = 825.0
offset_bottom = 156.0
text = "Nuestro equipo tiene miembros de muchos ambitos"
label_settings = SubResource("LabelSettings_2s7da")
horizontal_alignment = 1
vertical_alignment = 1

[node name="asset7" type="Label" parent="Pistas"]
visible = false
offset_left = 440.0
offset_top = 50.0
offset_right = 825.0
offset_bottom = 156.0
text = "¿Qué herramienta usamos en este equipo?"
label_settings = SubResource("LabelSettings_2s7da")
horizontal_alignment = 1
vertical_alignment = 1

[node name="asset8" type="Label" parent="Pistas"]
visible = false
offset_left = 440.0
offset_top = 50.0
offset_right = 825.0
offset_bottom = 156.0
text = "Pista de la explicacion"
label_settings = SubResource("LabelSettings_2s7da")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="Paginas/Pagina1/Huecos/asset1/Area2D" to="Paginas/Pagina1/Huecos/asset1" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Paginas/Pagina1/Huecos/asset1/Area2D" to="Paginas/Pagina1/Huecos/asset1" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Paginas/Pagina1/Huecos/asset1/Area2D" to="Paginas/Pagina1/Huecos/asset1" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="Paginas/Pagina1/Huecos/asset2/Area2D" to="Paginas/Pagina1/Huecos/asset2" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Paginas/Pagina1/Huecos/asset2/Area2D" to="Paginas/Pagina1/Huecos/asset2" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Paginas/Pagina1/Huecos/asset2/Area2D" to="Paginas/Pagina1/Huecos/asset2" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="Paginas/Pagina2/Huecos/asset3/Area2D" to="Paginas/Pagina2/Huecos/asset3" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Paginas/Pagina2/Huecos/asset3/Area2D" to="Paginas/Pagina2/Huecos/asset3" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Paginas/Pagina2/Huecos/asset3/Area2D" to="Paginas/Pagina2/Huecos/asset3" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="Paginas/Pagina2/Huecos/asset4/Area2D" to="Paginas/Pagina2/Huecos/asset4" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Paginas/Pagina2/Huecos/asset4/Area2D" to="Paginas/Pagina2/Huecos/asset4" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Paginas/Pagina2/Huecos/asset4/Area2D" to="Paginas/Pagina2/Huecos/asset4" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="Paginas/Pagina3/Huecos/asset5/Area2D" to="Paginas/Pagina3/Huecos/asset5" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Paginas/Pagina3/Huecos/asset5/Area2D" to="Paginas/Pagina3/Huecos/asset5" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Paginas/Pagina3/Huecos/asset5/Area2D" to="Paginas/Pagina3/Huecos/asset5" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="Paginas/Pagina3/Huecos/asset6/Area2D" to="Paginas/Pagina3/Huecos/asset6" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Paginas/Pagina3/Huecos/asset6/Area2D" to="Paginas/Pagina3/Huecos/asset6" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Paginas/Pagina3/Huecos/asset6/Area2D" to="Paginas/Pagina3/Huecos/asset6" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="Paginas/Pagina4/Huecos/asset7/Area2D" to="Paginas/Pagina4/Huecos/asset7" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Paginas/Pagina4/Huecos/asset7/Area2D" to="Paginas/Pagina4/Huecos/asset7" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Paginas/Pagina4/Huecos/asset7/Area2D" to="Paginas/Pagina4/Huecos/asset7" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="Paginas/Pagina4/Huecos/asset8/Area2D" to="Paginas/Pagina4/Huecos/asset8" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Paginas/Pagina4/Huecos/asset8/Area2D" to="Paginas/Pagina4/Huecos/asset8" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Paginas/Pagina4/Huecos/asset8/Area2D" to="Paginas/Pagina4/Huecos/asset8" method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="Paginas/Botones/Derecha/Button" to="Paginas/Botones" method="_on_pressed_der"]
[connection signal="pressed" from="Paginas/Botones/Izquierda/Button" to="Paginas/Botones" method="_on_pressed_izq"]
[connection signal="pressed" from="Objetos/asset1/asset1" to="Objetos/asset1/asset1" method="_on_button_pressed"]
[connection signal="pressed" from="Objetos/asset2" to="Objetos/asset2" method="_on_button_pressed"]
[connection signal="pressed" from="Objetos/asset3/asset3" to="Objetos/asset3/asset3" method="_on_button_pressed"]
[connection signal="pressed" from="Objetos/asset4" to="Objetos/asset4" method="_on_button_pressed"]
[connection signal="pressed" from="Objetos/asset5/asset5" to="Objetos/asset5/asset5" method="_on_button_pressed"]
[connection signal="pressed" from="Objetos/asset6" to="Objetos/asset6" method="_on_button_pressed"]
[connection signal="pressed" from="Objetos/asset7" to="Objetos/asset7" method="_on_button_pressed"]
[connection signal="pressed" from="Objetos/asset8" to="Objetos/asset8" method="_on_button_pressed"]
